syntax = "proto3";

option go_package = "./ecommerce";
option java_package = "ecommerce";
option java_multiple_files = true;

package ecommerce;

import "google/protobuf/wrappers.proto";

service OrderManagement {
	rpc addOrder(Order) returns (google.protobuf.StringValue);
	rpc getOrder(google.protobuf.StringValue) returns (Order);
	rpc searchOrders(google.protobuf.StringValue) returns (stream Order);
	rpc updateOrders(stream Order) returns (google.protobuf.StringValue);
	rpc processOrders(stream google.protobuf.StringValue) returns (stream CombinedShipment);
}

message CombinedShipment {
	string id = 1;
	string status = 2;
	repeated Order ordersList = 3;
}

message Order {
	string id = 1;
	repeated string items = 2;
	string description = 3;
	uint64 price = 4;
	string destination = 5;
}